@@ -1,5 +1,6 @@
 .env
 .idea/
+.php_cs.cache
 composer.lock
 node_modules/
 vendor/
